--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 }
 
 .test {
-	    display: inline-flex;
+	display: inline-flex;
     align-items: center;
 }
 
@@ -57,4 +57,8 @@
 .top-100 h3 {
 	color:#6c56cd;
 	margin-top: 60px;
+}
+
+#list h5:hover {
+	color: gray;
 }
